--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+
 body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
   direction: rtl;
-  background: #0f0f0f url('assets/bg.png') no-repeat center center fixed;
+  background: #0f0f0f url('assets/bg.jpg') no-repeat center center fixed;
   background-size: cover;
   color: white;
 }
