--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Arial', sans-serif;
   margin: 0;
@@ -9,35 +8,10 @@ body {
   color: white;
 }
 
-.logo {
-  font-family: 'Segoe UI', Tahoma, sans-serif;
-  font-size: 3rem;
-  font-weight: 800;
-  text-align: center;
-  color: #10e8e0;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  position: relative;
-  margin-bottom: 10px;
-}
-
-.logo::before,
-.logo::after {
-  content: "";
-  position: absolute;
-  height: 4px;
-  background: linear-gradient(to right, #10e8e0, #00ffd2);
-  top: 50%;
-  width: 40%;
-  transform: translateY(-50%);
-}
-
-.logo::before {
-  left: -45%;
-}
-
-.logo::after {
-  right: -45%;
+.logo-img {
+  max-width: 250px;
+  display: block;
+  margin: 0 auto 15px;
 }
 
 header {
